# cpp-helper

./: CHANGELOG.md  README.md  cpp_std_gen.bat  package-lock.json  package.json  tsconfig.json
get_std_include/: convert.ts  cppStdMap.json  get_std_include.ts  get_std_include_old.ts  result.json
src/: AddIncludes.ts  AddMissingFunctions.ts  CreateConstructor.ts  CreateDeafultConstructor.ts  CreateDefaultConstructor.ts  CreateDestructor.ts  ForwardDeclaration.ts  MoveImpl.ts  MoveToHeader.ts  Symbol.ts  buildGcc.ts  cppStdMap.ts  extension.ts  reservedWords.ts  util.ts
test-cpp/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  dog.h  main.cc  person.cpp  person.h  t
test-cpp/src/dog/: dog.h
test-cpp/src/include/: socket.h
test-cpp/src/person/: person.cpp  person.h
test-cpp/src/person/bert/: bert.h
test-cpp/src/person/erny/: erny  erny.cpp  erny.h
